# c_host_lua_plugin_server

./: CMakeLists.txt  README.md  app.lua  build.sh  lua_to_header.py
include/: app_lua.h  applua_src.h  etlua_src.h  lua_helpers.h  plugin_manager.h  server.h
plugins/carddav/: mytes.lua  plugin.lua
plugins/carddav/views/: index.etlua
plugins/default/: plugin.lua
plugins/default/views/: index.etlua
plugins/inventory/: plugin.lua
plugins/inventory/views/: edit-item.etlua  index.etlua  new-item.etlua  view-item.etlua
plugins/sabotage/: plugin.lua
src/: lua_helpers.c  main.c  plugin_manager.c  server.c
